# YouTubeDownLoader

./: .gitignore  Main.folder.spec  Main.onefile.spec  Main.py  README.md  pyproject.toml  requirements.txt  run_pylupdate.bat
common/: Config.py  MyThread.py  MyWidget.py  SignalBus.py  Style.py  Uploader.py
res/: LICENCE.html  LICENCE.md
res/lang/: zh_CN.qm  zh_CN.ts
res/qss/dark/: card_interface.qss  sample_interface.qss  scroll_interface.qss
res/qss/light/: card_interface.qss  sample_interface.qss  scroll_interface.qss
view/: DownloadInterface.py  InfoInterface.py  LocalVideoInterface.py  SettingInterface.py  SubscribeInterface.py  TodoListInterface.py  ToolInterface.py  UploadInterface.py
view/pivots/: SubtileWrapInterface.py  SubtitleWrapInterface.py  VideoTransInterface.py
