[project]
name = "youtubedownloader"
version = "7.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "google-api-python-client>=2.162.0",
    "pyside6-fluent-widgets>=1.7.7",
    "pysocks>=1.7.1",
    "yt-dlp[curl-cffi,default]==2025.7.21",
]


[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.format]
# 使用单引号
quote-style = "single"
# 启用docstring代码片段格式化
docstring-code-format = true
skip-magic-trailing-comma = true

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
]
